--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="grey fixed-sidebar" ng-controller="AppController">
+<body class="grey fixed-sidebar" ng-controller="AppController as AppVm">
 
     <div ui-view ></div>
 
