--- a/client/common/tmpl/footer.tpl.html
+++ b/client/common/tmpl/footer.tpl.html
@@ -1,4 +1,4 @@
-<div class="footer fixed">
+<div class="footer">
     <div>
         <strong>Copyright</strong> FEI Systems &copy; {{currentDate}}
     </div>
