--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -1,135 +1,85 @@
-<nav class="navbar-default navbar-static-side fix-sidebar" role="navigation">
+<nav class="navbar-default navbar-static-side fix-sidebar" role="navigation" >
     <div class="sidebar-collapse">
-                    <ul side-navigation class="nav" id="side-menu">
-                        <li class="nav-header">
+        <ul side-navigation class="nav" id="side-menu">
+            <li class="nav-header">
 
-                            <div class="dropdown profile-element" dropdown>
-                                <img alt="Patient profile photo" class="img-circle" src="Assets/img/profile_small.jpg"/>
-                                <a class="dropdown-toggle" dropdown-toggle href="">
+                <div class="dropdown profile-element" dropdown>
+                    <img alt="Patient profile photo" class="img-circle" src="Assets/img/profile_small.jpg"/>
+                    <a class="dropdown-toggle" dropdown-toggle href="">
                                     <span class="clear">
                                         <span class="block m-t-xs">
-                                            <strong class="font-bold"><span ng-bind="authentication.userName"></span></strong>
+                                            <strong class="font-bold"><span ng-bind="AppVm.authentication.userName"></span></strong>
                                         </span>
                                         <span class="text-muted text-xs block light-blue">Male DOB <b class="caret"></b></span>
                                      </span>
-                                </a>
-                                <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                    <li><a href="">Profile</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="" ng-click="logout()">Logout</a></li>
-                                </ul>
-                            </div>
-                            <div class="logo-element">
-                                HIE
-                            </div>
-                        </li>
-
-                        <li ui-sref-active="active" >
-                            <a ui-sref="index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
-                        </li>
-                        <li ng-class="{active: $state.includes('provider')}" >
-                            <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Provider</span><span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level" ng-class="{'in': $state.includes('provider')}">
-                                <li ui-sref-active="active"><a ui-sref="provider.list">List</a></li>
-                                <li ui-sref-active="active"><a ui-sref="provider.lookup">Lookup</a></li>
-                            </ul>
-                        </li>
-
-                        <li ng-class="{active: $state.includes('patient')}" ng-show="showhealthinformationmenu" ng-click="routetohealthinformation()">
-                            <a href=""><i class="fa fa-stethoscope"></i> <span class="nav-label"> Health Information</span> <span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level" ng-class="{'in': ($state.includes('patient') )}">
-                                <li ui-sref-active="active" ng-hide="hidesection && !toggledemographics" >
-                                        <a href="" ng-click="scrolltoandexpand({target: 'demographics', expand:false})">
-                                            <i class="fa" ng-class="{'fa-circle': toggledemographics, 'fa-circle-o':!toggledemographics }"></i>Demographics
-                                        </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !togglemedications" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'medications', expand:false})">
-                                        <i class="fa " ng-class="{'fa-circle': togglemedications, 'fa-circle-o': !togglemedications }"></i>Medications
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !togglealerts" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'alerts', expand:false})">
-                                        <i class="fa " ng-class="{'fa-circle': togglealerts, 'fa-circle-o': !togglealerts }"></i>Alerts
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !toggleresults" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'results', expand:true})">
-                                        <i class="fa " ng-class="{'fa-circle': toggleresults, 'fa-circle-o': !toggleresults }" ></i>Results
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !toggleencounters" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'encounters', expand:true})">
-                                        <i class="fa " ng-class="{'fa-circle': toggleencounters, 'fa-circle-o': !toggleencounters }" ></i>Encounters
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !toggleproblems" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'problems', expand:false})">
-                                        <i class="fa " ng-class="{'fa-circle': toggleproblems, 'fa-circle-o': !toggleproblems }" ></i>Problems
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !togglevitalSigns" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'vitalSigns', expand:true})">
-                                        <i class="fa " ng-class="{'fa-circle': togglevitalSigns, 'fa-circle-o': !togglevitalSigns }" ></i>Vital Signs
-                                    </a>
-                                </li>
-                                <li ui-sref-active="active" ng-hide="hidesection && !toggleprocedure" >
-                                    <a  href="" ng-click="scrolltoandexpand({target: 'procedures', expand:false})">
-                                        <i class="fa "  ng-class="{'fa-circle': toggleprocedure, 'fa-circle-o': !toggleprocedure }"  ></i>Procedures
-                                    </a>
-                                </li>
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !togglePlanOfCare" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('planofcare', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': togglePlanOfCare, 'fa-circle-o': !togglePlanOfCare }"  ></i>Plan of Care-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleFamilyHistory" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('familyhistory', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': toggleFamilyHistory, 'fa-circle-o': !toggleFamilyHistory }" ></i>Family History-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleHealthcareProviders" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('healthcareproviders', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': toggleFamilyHistory, 'fa-circle-o': !toggleFamilyHistory }" ></i>Healthcare Providers-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleSocialHistory" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('socialhistory', true)">-->
-                                        <!--<i class="fa "  ng-class="{'fa-circle': toggleSocialHistory, 'fa-circle-o':  !toggleSocialHistory }"></i>Social History-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleAdvancedDirectives" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('advanceddirectives', true)">-->
-                                        <!--<i class="fa "  ng-class="{'fa-circle': toggleAdvancedDirectives, 'fa-circle-o': !toggleAdvancedDirectives }" ></i>Advanced Directives-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleFunctionalStatus" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('functionalstatus', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': toggleFunctionalStatus, 'fa-circle-o': !toggleFunctionalStatus }" ></i>Functional Status-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleSupport" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('support', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': toggleSupport, 'fa-circle-o': !toggleSupport }" ></i>Support-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !togglePayers" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('payers', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': togglePayers, 'fa-circle-o': !togglePayers }" ></i>Payers-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleImmunization" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('immunization', true)">-->
-                                        <!--<i class="fa " ng-class="{'fa-circle': toggleImmunization, 'fa-circle-o': !toggleImmunization }" ></i>Immunizations-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li ui-sref-active="active" ng-hide="hidesection && !toggleMedicalEquipment" >-->
-                                    <!--<a  href="" ng-click="scrolltoandexpand('medicalequipment', true)">-->
-                                        <!--<i class="fa "  ng-class="{'fa-circle': toggleMedicalEquipment, 'fa-circle-o': !toggleMedicalEquipment }" ></i>Medical Equipment-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                           </ul>
-                        </li>
-                     </ul>
+                    </a>
+                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                        <li><a href="">Profile</a></li>
+                        <li class="divider"></li>
+                        <li><a href="" ng-click="AppVm.logOut()">Logout</a></li>
+                    </ul>
                 </div>
+                <div class="logo-element">
+                    HIE
+                </div>
+            </li>
+
+            <li ui-sref-active="active" >
+                <a ui-sref="index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
+            </li>
+            <li ng-class="{active: $state.includes('provider')}" >
+                <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Provider</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level" ng-class="{'in': $state.includes('provider')}">
+                    <li ui-sref-active="active"><a ui-sref="provider.list">List</a></li>
+                    <li ui-sref-active="active"><a ui-sref="provider.lookup">Lookup</a></li>
+                </ul>
+            </li>
+
+            <li ng-class="{active: $state.includes('patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()">
+                <a href=""><i class="fa fa-stethoscope"></i> <span class="nav-label"> Health Information</span> <span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level" ng-class="{'in': ($state.includes('patient') )}">
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleDemographics" >
+                        <a href="" ng-click="AppVm.scrollToAndExpand('demographics', false)">
+                            <i class="fa" ng-class="{'fa-circle': AppVm.toggleDemographics, 'fa-circle-o':!AppVm.toggleDemographics }"></i>Demographics
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleMedications" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('medications', false)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleMedications, 'fa-circle-o': !AppVm.toggleMedications }"></i>Medications
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleAlerts" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('alerts', false)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleAlerts, 'fa-circle-o': !AppVm.toggleAlerts }"></i>Alerts
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleResults" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('results', true)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleResults, 'fa-circle-o': !AppVm.toggleResults }" ></i>Results
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleEncounters" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('encounters', true)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleEncounters, 'fa-circle-o': !AppVm.toggleEncounters }" ></i>Encounters
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleProblems" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('problems', false)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleProblems, 'fa-circle-o': !AppVm.toggleProblems }" ></i>Problems
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleVitalSigns" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('vitalSigns', true)">
+                            <i class="fa " ng-class="{'fa-circle': AppVm.toggleVitalSigns, 'fa-circle-o': !AppVm.toggleVitalSigns }" ></i>Vital Signs
+                        </a>
+                    </li>
+                    <li ui-sref-active="active" ng-hide="AppVm.hideSection && !AppVm.toggleProcedure" >
+                        <a  href="" ng-click="AppVm.scrollToAndExpand('procedures', false)">
+                            <i class="fa "  ng-class="{'fa-circle': AppVm.toggleProcedure, 'fa-circle-o': !AppVm.toggleProcedure }"  ></i>Procedures
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </nav>
