--- a/client/common/tmpl/footer.tpl.html
+++ b/client/common/tmpl/footer.tpl.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <div>
-        <strong>Copyright</strong> FEI Systems &copy; {{currentDate}}
+        <strong>Copyright</strong> FEI Systems &copy; {{AppVm.currentDate}}
     </div>
 </div>
