--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -26,6 +26,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-6 col-md-offset-3">
+            <div class="text-center">
+                <pagination total-items="providerLookupResult.totalNumberOfProviders"
+                            ng-model="currentPage"
+                            ng-change="loadPage(currentPage)" max-size="providerLookupResult.itemsPerPage"
+                            class="pagination-sm"
+                            boundary-links="true"></pagination>
+            </div>
+        </div>
     </div>
 
 </div>
