Add angular messages and jasny plugins
#7058: Create the search provider UI that will interface with PLS API

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
     <script type="text/javascript" src="assets/js/jquery/jquery-2.1.1.min.js"></script>
     <script  type="text/javascript" src="assets/js/plugins/jquery-ui/jquery-ui.js"></script>
     <script  type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script  type="text/javascript" src="assets/js/plugins/jasny/jasny-bootstrap.min.js"></script>
 
     <!-- MetsiMenu -->
     <script  type="text/javascript" src="assets/js/plugins/metisMenu/jquery.metisMenu.js"></script>
@@ -63,6 +64,7 @@
     <script  type="text/javascript" src="assets/js/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script type="text/javascript" src="assets/js/angular-idle.js"></script>
     <script  type="text/javascript" src="assets/js/plugins/iCheck/icheck.min.js"></script>
+    <script  type="text/javascript" src="assets/js/angular/angular-messages.min.js"></script>
 
     <!-- TESTBED ANGULARJS RELATED -->
     <!-- compiled JavaScript -->
