--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -34,7 +34,6 @@
                             <tr>
                                 <td></td>
                                 <th>Name/Facility</th>
-                                <th>Specialty</th>
                                 <th>NPI</th>
                                 <th>Contact Number</th>
                                 <th>Address</th>
@@ -43,7 +42,7 @@
                         <tbody>
                             <tr ng-repeat="provider in providers">
                                 <td>
-                                    <button type="button" class="btn btn-xs" ng-class="{ 'btn-red' : !provider.activeConsent, 'btn-grey': provider.activeConsent} " ng-disabled="provider.activeConsent" ng-click="openDeleteProviderModal('sm')">
+                                    <button type="button" class="btn btn-xs" ng-class="{ 'btn-red' : provider.deletable, 'btn-grey': !provider.deletable} " ng-disabled="!provider.deletable" ng-click="openDeleteProviderModal(provider, 'sm')">
                                         <div class="fa fa-minus">
                                              <span class="sr-only">delete provider</span>
                                              <span class="sr-only" ng-bind="provider.lastName"></span>
@@ -51,15 +50,13 @@
                                         </div>
                                     </button>
                                 </td>
-                                <td> <span ng-bind="provider.firstName"></span>,<span ng-bind="provider.lastName"></span> </td>
-                                <td> <span ng-bind="provider.providerTaxonomyDescription"></span></td>
+                                <td>
+                                    {{ provider|nameorfacility }}
+                                </td>
                                 <td> <span ng-bind="provider.npi"></span> </td>
                                 <td> <span ng-bind="provider.practiceLocationAddressTelephoneNumber"></span> </td>
                                 <td>
-                                    <span ng-bind="provider.firstLinePracticeLocationAddress"></span>,
-                                    <span ng-bind="provider.practiceLocationAddressCityName"></span>,
-                                    <span ng-bind="provider.practiceLocationAddressStateName"></span>,
-                                    <span ng-bind="provider.practiceLocationAddressPostalCode"></span>
+                                    {{provider|address}}
                                 </td>
                             </tr>
                         </tbody>
