Create a notification service. Add notification toast message on success or failure in deleting provider. Show empty row with message if the list of providers is empty.
#7057 - Create manage providers UI that interfaces with Patient Consent Management AP

--- a/client/app/provider/tmpl/provider-delete-modal.tpl.html
+++ b/client/app/provider/tmpl/provider-delete-modal.tpl.html
@@ -6,7 +6,7 @@
         <p>Are you sure you want to delete {{ provider | nameorfacility}} provider?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white" ng-click="cancel()">Close</button>
+        <button type="button" class="btn btn-white" ng-click="cancel()">Cancel</button>
         <button type="button" class="btn btn-primary" ng-click="ok()">Delete</button>
     </div>
 </div>
