--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -40,6 +40,9 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr ng-if="providers.length === 0">
+                                <td colspan="5" class="text-center"> No provider has been added.</td>
+                            </tr>
                             <tr ng-repeat="provider in providers">
                                 <td>
                                     <button type="button" class="btn btn-xs" ng-class="{ 'btn-red' : provider.deletable, 'btn-grey': !provider.deletable} " ng-disabled="!provider.deletable" ng-click="openDeleteProviderModal(provider, 'sm')">
