--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <link href="assets/css/animate.css" rel="stylesheet">
     <link id="loadBefore" href="assets/css/style.css" rel="stylesheet">
     <link  href="assets/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link  href="assets/css/plugins/angular-notify/angular-notify.min.css" rel="stylesheet">
     
     <!-- INSPINIA RELATED CSS END -->
     <!-- Custom styles for this template -->
@@ -65,6 +66,7 @@
     <script type="text/javascript" src="assets/js/angular-idle.js"></script>
     <script  type="text/javascript" src="assets/js/plugins/iCheck/icheck.min.js"></script>
     <script  type="text/javascript" src="assets/js/angular/angular-messages.min.js"></script>
+    <script  type="text/javascript" src="assets/js/plugins/angular-notify/angular-notify.min.js"></script>
 
     <!-- TESTBED ANGULARJS RELATED -->
     <!-- compiled JavaScript -->
